fix: prevent code block overflow on mobile

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -75,7 +75,8 @@ pre {
 pre:not([copy-code]) {
   line-height: 0.7rem;
   padding: 16px;
-  width: fit-content;
+  max-width: 100%;
+  overflow-x: auto;
   margin-left: auto;
   margin-right: auto;
   display: block;
